--- a/web/md5login/index.html
+++ b/web/md5login/index.html
@@ -2,12 +2,12 @@
 <head>
     <title>
     </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="indexStyle.css">
     <script src="JavaScript-MD5/js/md5.min.js"></script>
     <script src="main.js"></script>
 </head>
 <body>
-
+    <div id="uselessSpace"></div>
     <div id="loginBox">
         <div id="usernameArea">
             Username: <input id ="usernameInput" type="text" name="username">
@@ -15,10 +15,11 @@
         <div id="passwordarea">
             Password: <input id="passwordInput" type="text" name="password"type="password">
         </div>
-        <div id="submitButton" onclick="formChanged()">Login</div>
-    </div>
-    <div id="userContent">
-        Error, not logged in
+        <div id="buttons">
+            <div id="submitButton" onclick="formChanged()">Login</div>
+            <a id="createAccountBTN" href="signUp.html">Sign Up</a>
+        </div>
+        <div id="loginStatus"></div>
     </div>
 </body>
 </html>
