--- a/web/md5login/index.html
+++ b/web/md5login/index.html
@@ -4,6 +4,10 @@
     </title>
     <link rel="stylesheet" href="indexStyle.css">
     <script src="JavaScript-MD5/js/md5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js.map"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.slim.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.slim.js.map"></script>
     <script src="main.js"></script>
 </head>
 <body>
