add some css and make cookie 'animate'

--- a/web/final project/main/index.html
+++ b/web/final project/main/index.html
@@ -4,7 +4,7 @@
   <title>cOOKiEClICkeR</title>
   
   <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
+  <script src="main.js"></script>
 
 
 
@@ -16,8 +16,10 @@
       <div id="CPS">filler text cps</div>
       <div id="numCookies">0</div>
     </div>
-    <div id="cookieImage">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/Crystal_Project_cookie.png" onclick="click()">
+    <div id="cookieDiv"
+    onclick="cookies++,document.getElementById('numCookies').innerHTML=cookies">
+      <img id "cookieImage" src="https://upload.wikimedia.org/wikipedia/commons/e/e5/Crystal_Project_cookie.png" height="256" width="256">
+      <!--I tried making a click() function, but it didnt work and jen and i couldnt figure out why-->
     </div>
   </div>
     
