--- a/web/final project/main/index.html
+++ b/web/final project/main/index.html
@@ -4,20 +4,17 @@
   <title>cOOKiEClICkeR</title>
   
   <link rel="stylesheet" href="style.css">
-  <script src="main.js"></script>
-
-
-
 </head>
 
 <body>
+    <script src="main.js"></script>
   <div id="cookiePanel">
     <div id="factoryInfo">
-      <div id="CPS">filler text cps</div>
+      <div id="CPF">filler text cps</div>
       <div id="numCookies">0</div>
     </div>
     <div id="cookieDiv"
-    onclick="cookies++,document.getElementById('numCookies').innerHTML=cookies">
+    onclick="cookies++">
       <img id "cookieImage" src="https://upload.wikimedia.org/wikipedia/commons/e/e5/Crystal_Project_cookie.png" height="256" width="256">
       <!--I tried making a click() function, but it didnt work and jen and i couldnt figure out why-->
     </div>
